clean up implementation to delete cart record
