# services/cart/domain/entity.go
@@ -2,10 +2,6 @@ package domain
 
 import "errors"
 
-type InactivateCart struct {
-	ID string `json:"id"`
-} // @name DeleteCartRequest
-
 type CartItem struct {
 	ProductID string  `json:"product_id" bson:"product_id"`
 	Weight    float32 `json:"weight,omitempty" bson:"weight"`
